<resources>
    <string name="app_name">Don\'t feed the \'pillar</string>

    <!-- Strings for main page -->
    <string name="title">Don\'t feed the \'pillar</string>
    <string name="start_game">Game Start</string>
    <string name="settings">settings</string>
    <string name="stats">stats</string>

    <!-- Strings for settings page -->
    <string name="max_word_length">max word length</string>
    <string name="min_word_length">min word length</string>
    <string name="language">language</string>
    <string name="revert">revert settings</string>
    <string name="cancel">Cancel</string>
    <string name="save">save</string>

    <!-- Strings for stats page -->
    <string name="wins">Wins:</string>
    <string name="loses">Loses:</string>
    <string name="average_attempts">Average attempts:</string>
    <string name="average_word_length">Average word length</string>
    <string name="reset">Reset</string>
    <string name="back_to_title">Back to title</string>
    
    <!-- Toast message strings -->
    <string name="saving">Saving…</string>
    <string name="saved">Saved!</string>
    <string name="save_fail">Saving failed…</string>
    <string name="cancel_settings">Settings canceled</string>
    <string name="revert_settings">Settings have been reset!</string>

    <!-- Debug strings -->
    <string name="button_pressed">Button Pressed</string>
    <string name="not_implemented">feature is not yet implemented</string>
    

    <!-- Placeholder string -->
    <string name="hello_blank_fragment">I MUST NOT BE SEEN</string>
</resources>